gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for gschem

Most recent changes (version wise) are at the top of this file 
All the changes are usually noted in this file when they are checked
into the cvs repository.

6/23/99 Added the first bits of support for the writing of images

	Added configure ability to find and turn off libgd support

	Added image-orientation keyword to control the future ability
	to write portrait and landscape images

6/19/99 Fixed a bug where you would select something and then visual
	cues would disappear when you hit redraw

6/10/99 Added support for this idea that hidden text is NOT created, main
	changes were in the hidding and unhidding of text items

5/31/99 Found a minor bug in move, not all nets were being redrawn

	Worked a bit more to reduce the flashing of nets/pins when a complex
	is moved

	Put a redraw in o_delete, just to make things look better after 
	something is deleted

	I think I got the flashing (when doing move's under control now)

	A few updates to the sample schematics

	Added agile-vfo-block.sch to the dist finally (as an example schematic)

	Added the ability to change colors of objects from within gschem
	(finally)

	Added hotkey assignment for above dialog box

5/29/99 Worked some more on the copy operation for nets

	Added o_redraw_real (which redraws all objects given a list which
	might not be the real objects)

	Started updating the conn hash table in when nets are being drawn
		Added o_ales_draw_objects 
		Added o_net_ales_erase
		Added o_net_ales_draw

	More updates to getting copy/move/rotate/mirror working for nets.

	Got copy/move/rotate/mirror working for nets only.

	Worked on getting copy/move/rotate/mirror working for pins

	Worked on getting copy/move/rotate/mirror working for complex
	objects (with contain nets/pins)

	Got pins to properly update visual cues when they are being drawn
