@@ -65,7 +65,7 @@ GtkMenuEntry menu_items[] =
 	{"<Main>/File/Save Page as....", NULL, i_callback_file_save_as, NULL},
 	{"<Main>/File/Save All", NULL, i_callback_file_save_all, NULL},
 	{"<Main>/File/Print...", NULL, i_callback_file_print, NULL},
-	{"<Main>/File/Image Write...", NULL, i_callback_file_image_write, NULL},
+	{"<Main>/File/Write Image...", NULL, i_callback_file_image_write, NULL},
 	{"<Main>/File/<separator>", NULL, NULL, NULL},
 	{"<Main>/File/Script Execute...", NULL, i_callback_file_script, NULL},
 	{"<Main>/File/<separator>", NULL, NULL, NULL},
@@ -168,7 +168,7 @@ static GtkItemFactoryEntry menu_items[] = {
 	{"/File/Save Page as....", NULL, i_callback_file_save_as, 0, NULL},
 	{"/File/Save All", NULL, i_callback_file_save_all, 0, NULL},
 	{"/File/Print...", NULL, i_callback_file_print, 0, NULL},
-	{"/File/Image Write...", NULL, i_callback_file_image_write, 0, NULL},
+	{"/File/Write Image...", NULL, i_callback_file_image_write, 0, NULL},
 	{"/File/sep1",     NULL,         NULL, 0, "<Separator>"},
 	{"/File/Script Execute...", NULL, i_callback_file_script, 0, NULL},
 	{"/File/sep2",     NULL,         NULL, 0, "<Separator>"},
