@@ -11,7 +11,7 @@ void f_save_close(TOPLEVEL *w_current, char *filename);
 void f_save(TOPLEVEL *w_current, char *filename);
 /* f_image.c */
 void f_image_write_objects(TOPLEVEL *w_current, OBJECT *head, int start_x, int start_y, float scale);
-void f_image_write(TOPLEVEL *w_current, char *filename);
+void f_image_write(TOPLEVEL *w_current, char *filename, int width, int height);
 void f_image_set_type(TOPLEVEL *w_current, int type);
 /* f_print.c */
 void f_print_set_color(FILE *fp, int color);
@@ -80,6 +80,7 @@ void o_arc_translate(TOPLEVEL *w_current, int dx, int dy, OBJECT *object);
 void o_arc_translate_world(TOPLEVEL *w_current, int x1, int y1, OBJECT *object);
 OBJECT *o_arc_copy(TOPLEVEL *w_current, OBJECT *list_tail, OBJECT *o_current);
 void o_arc_print(TOPLEVEL *w_current, FILE *fp, OBJECT *o_current, int origin_x, int origin_y);
+void o_arc_image_write(TOPLEVEL *w_current, OBJECT *o_current, int origin_x, int origin_y);
 void o_arc_rotate(TOPLEVEL *w_current, int centerx, int centery, int angle, OBJECT *object);
 void o_arc_rotate_world(TOPLEVEL *w_current, int world_centerx, int world_centery, int angle, OBJECT *object);
 void o_arc_mirror(TOPLEVEL *w_current, int centerx, int centery, OBJECT *object);
@@ -139,6 +140,7 @@ void o_box_translate(TOPLEVEL *w_current, int dx, int dy, OBJECT *object);
 void o_box_translate_world(TOPLEVEL *w_current, int x1, int y1, OBJECT *object);
 OBJECT *o_box_copy(TOPLEVEL *w_current, OBJECT *list_tail, OBJECT *o_current);
 void o_box_print(TOPLEVEL *w_current, FILE *fp, OBJECT *o_current, int origin_x, int origin_y);
+void o_box_image_write(TOPLEVEL *w_current, OBJECT *o_current, int origin_x, int origin_y);
 void o_box_rotate(TOPLEVEL *w_current, int centerx, int centery, int angle, OBJECT *object);
 void o_box_rotate_world(TOPLEVEL *w_current, int world_centerx, int world_centery, int angle, OBJECT *object);
 void o_box_mirror(TOPLEVEL *w_current, int centerx, int centery, OBJECT *object);
@@ -155,6 +157,7 @@ void o_circle_translate(TOPLEVEL *w_current, int dx, int dy, OBJECT *object);
 void o_circle_translate_world(TOPLEVEL *w_current, int x1, int y1, OBJECT *object);
 OBJECT *o_circle_copy(TOPLEVEL *w_current, OBJECT *list_tail, OBJECT *o_current);
 void o_circle_print(TOPLEVEL *w_current, FILE *fp, OBJECT *o_current, int origin_x, int origin_y);
+void o_circle_image_write(TOPLEVEL *w_current, OBJECT *o_current, int origin_x, int origin_y);
 void o_circle_rotate(TOPLEVEL *w_current, int centerx, int centery, int angle, OBJECT *object);
 void o_circle_rotate_world(TOPLEVEL *w_current, int world_centerx, int world_centery, int angle, OBJECT *object);
 void o_circle_mirror(TOPLEVEL *w_current, int centerx, int centery, OBJECT *object);
@@ -185,6 +188,7 @@ void o_image_init(void);
 void o_image_create(int x, int y);
 void o_image_close(void);
 int o_image_write(char *filename);
+gdImagePtr o_image_geda2gd_color(int color);
 /* o_line_basic.c */
 void get_line_bounds(TOPLEVEL *w_current, LINEPTS *points, int *left, int *top, int *right, int *bottom);
 void world_get_line_bounds(TOPLEVEL *w_current, LINEPTS *points, int *left, int *top, int *right, int *bottom);
@@ -197,6 +201,7 @@ void o_line_translate(TOPLEVEL *w_current, int dx, int dy, OBJECT *object);
 void o_line_translate_world(TOPLEVEL *w_current, int x1, int y1, OBJECT *object);
 OBJECT *o_line_copy(TOPLEVEL *w_current, OBJECT *list_tail, OBJECT *o_current);
 void o_line_print(TOPLEVEL *w_current, FILE *fp, OBJECT *o_current, int origin_x, int origin_y);
+void o_line_image_write(TOPLEVEL *w_current, OBJECT *o_current, int origin_x, int origin_y);
 void o_line_scale_world(TOPLEVEL *w_current, int x_scale, int y_scale, OBJECT *object);
 void o_line_rotate(TOPLEVEL *w_current, int centerx, int centery, int angle, OBJECT *object);
 void o_line_rotate_world(TOPLEVEL *w_current, int world_centerx, int world_centery, int angle, OBJECT *object);
@@ -219,6 +224,7 @@ void o_net_translate(TOPLEVEL *w_current, int dx, int dy, OBJECT *object);
 void o_net_translate_world(TOPLEVEL *w_current, int x1, int y1, OBJECT *object);
 OBJECT *o_net_copy(TOPLEVEL *w_current, OBJECT *list_tail, OBJECT *o_current);
 void o_net_print(TOPLEVEL *w_current, FILE *fp, OBJECT *o_current, int origin_x, int origin_y);
+void o_net_image_write(TOPLEVEL *w_current, OBJECT *o_current, int origin_x, int origin_y);
 void o_net_rotate(TOPLEVEL *w_current, int centerx, int centery, int angle, OBJECT *object);
 void o_net_rotate_world(TOPLEVEL *w_current, int world_centerx, int world_centery, int angle, OBJECT *object);
 void o_net_mirror(TOPLEVEL *w_current, int centerx, int centery, OBJECT *object);
@@ -259,6 +265,7 @@ void o_pin_translate(TOPLEVEL *w_current, int dx, int dy, OBJECT *object);
 void o_pin_translate_world(TOPLEVEL *w_current, int x1, int y1, OBJECT *object);
 OBJECT *o_pin_copy(TOPLEVEL *w_current, OBJECT *list_tail, OBJECT *o_current);
 void o_pin_print(TOPLEVEL *w_current, FILE *fp, OBJECT *o_current, int origin_x, int origin_y);
+void o_pin_image_write(TOPLEVEL *w_current, OBJECT *o_current, int origin_x, int origin_y);
 void o_pin_rotate(TOPLEVEL *w_current, int centerx, int centery, int angle, OBJECT *object);
 void o_pin_rotate_world(TOPLEVEL *w_current, int world_centerx, int world_centery, int angle, OBJECT *object);
 void o_pin_mirror(TOPLEVEL *w_current, int centerx, int centery, OBJECT *object);
